migrate to java 8